--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,7 @@ Temporary Items
 /css/custom.css
 
 # Ignore users config file but keep the sample.
-/config/*
+#/config/*
 !/config/config.js.sample
 
 # Vim
